--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 [tool.briefcase]
 project_name = "Xdcheckin"
 bundle = "org.eu.pnxlr.git"
-version = "1.0.0"
+version = "1.0.1"
 url = "https://github.com/Pairman/Xdcheckin"
 license = "GNU General Public License v3 (GPLv3)"
 author = "Pairman"
@@ -172,6 +172,7 @@ requires = [
 requires = [
     "toga-android~=0.4.0"
 ]
+build_gradle_extra_content = "android.defaultConfig.ndk.abiFilters = ['arm64-v8a']"
 
 # Web deployments
 [tool.briefcase.app.xdcheckin.web]
