--- a/pyproject.toml
+++ b/pyproject.toml
@@ -189,7 +189,10 @@ requires = [
 requires = [
     "toga-android~=0.4.0"
 ]
-build_gradle_extra_content = "android.defaultConfig.ndk.abiFilters = ['arm64-v8a']"
+build_gradle_extra_content = """
+android.defaultConfig.ndk.abiFilters = ['arm64-v8a']
+android.buildTypes.debug.debuggable = false
+"""
 
 # Web deployments
 [tool.briefcase.app.xdcheckin.web]
