--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,35 +1,58 @@
 # This project was generated with 0.3.16 using template: https://github.com/beeware/briefcase-template@v0.3.16
-[tool.briefcase]
-project_name = "Xdcheckin"
-bundle = "org.eu.pnxlr.git"
+[project]
+name = "Xdcheckin"
 version = "1.2.7"
+license = {text = "GNU General Public License v3 (GPLv3)"}
+readme = "README.md"
+description = "Chaoxing Checkin Tool for XDU."
+authors = [
+	{name = "Pairman", email = "pairmanxlr@gmail.com"}
+]
+requires-python = ">=3.8"
+keywords = ["xdu", "xidian", "chaoxing", "livestream"]
+classifiers = [
+    "Framework :: Flask",
+    "Programming Language :: Python :: 3",
+]
+dependencies = [
+        "flask",
+        "flask-session",
+        "pillow",
+        "pycryptodome",
+        "pyzbar",
+        "requests",
+        "requests-cache",
+        "waitress"
+]
+
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["xdcheckin.server*"]
+
+[tool.briefcase]
+project_name = "{project.name}"
+bundle = "org.eu.pnxlr.git"
+version = "{project.version}"
 url = "https://github.com/Pairman/Xdcheckin"
-license = "GNU General Public License v3 (GPLv3)"
-author = "Pairman"
-author_email = "pairmanxlr@gmail.com"
+license = "{project.license}"
+author = "{project.authors[0].name}"
+author_email = "{project.authors[0].email}"
 
 [tool.briefcase.app.xdcheckin]
-formal_name = "Xdcheckin"
-description = "Chaoxing Checkin Tool for XDU."
-long_description = """Chaoxing Checkin Tool for XDU.
-"""
+formal_name = "{project.name}"
+description = "{project.description}"
+long_description = """Chaoxing Checkin Tool for XDU.     """
 icon = "src/xdcheckin/resources/xdcheckin"
 sources = [
-    "src/backend",
     "src/xdcheckin"
 ]
 test_sources = []
 
-requires = [
-	"flask",
-	"flask-session",
-	"pillow",
-	"pycryptodome",
-	"pyzbar",
-	"requests",
- 	"requests-cache",
-	"waitress"
-]
+requires = ["{project.dependencies | join(',')}"]
 test_requires = []
 
 [tool.briefcase.app.xdcheckin.macOS]
