--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ Homepage = "https://github.com/Pairman/Xdcheckin"
 xdcheckin-server = "xdcheckin.server.server:main"
 
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
