--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 # This project was generated with 0.3.16 using template: https://github.com/beeware/briefcase-template@v0.3.16
 [project]
 name = "Xdcheckin"
-version = "1.2.9"
+version = "1.2.10"
 license = {text = "GNU General Public License v3 (GPLv3)"}
 readme = "README.md"
 description = "Chaoxing Checkin Tool for XDU."
@@ -40,11 +40,14 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools.packages.find]
 where = ["src"]
 include = [
-	"xdcheckin*",
-	"xdcheckin.server*",
-	"xdcheckin.core*"
+	"xdcheckin.*",
+	"xdcheckin.core.*"，
+	"xdcheckin.server.*"
 ]
-exclude = ["xdcheckin.app*"]
+exclude = ["xdcheckin.app.*"]
+
+[tool.setuptools.package_data]
+xdcheckin.server = ["static/*", "templates/*"]
 
 [tool.briefcase]
 project_name = "Xdcheckin"
