--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,9 @@
 # This project was generated with 0.3.16 using template: https://github.com/beeware/briefcase-template@v0.3.16
+
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "Xdcheckin"
 version = "1.2.10"
@@ -17,14 +22,14 @@ classifiers = [
     "License :: OSI Approved :: GNU General Public License (GPL)"
 ]
 dependencies = [
-        "flask",
-        "flask-session",
-        "pillow",
-        "pycryptodome",
-        "pyzbar",
-        "requests",
-        "requests-cache",
-        "waitress"
+        "flask >= 3.0.0",
+        "flask-session >= 0.6.0",
+        "pillow >= 10.1.0",
+        "pycryptodome >= 3.9.4",
+        "pyzbar >= 0.1.9",
+        "requests >= 2.31.0",
+        "requests-cache >= 1.2.0",
+        "waitress >= 3.0.0"
 ]
 
 [project.urls]
@@ -32,10 +37,6 @@ Homepage = "https://github.com/Pairman/Xdcheckin"
 
 [project.scripts]
 xdcheckin-server = "xdcheckin.server.server:main"
-
-[build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 where = ["src"]
@@ -63,14 +64,14 @@ sources = [
 ]
 test_sources = []
 requires = [
-        "flask",
-        "flask-session",
-        "pillow",
-        "pycryptodome",
-        "pyzbar",
-        "requests",
-        "requests-cache",
-        "waitress"
+        "flask >= 3.0.0",
+        "flask-session >= 0.6.0",
+        "pillow >= 10.1.0",
+        "pycryptodome >= 3.9.4",
+        "pyzbar >= 0.1.9",
+        "requests >= 2.31.0",
+        "requests-cache >= 1.2.0",
+        "waitress >= 3.0.0"
 ]
 test_requires = []
 
