--- a/pyproject.toml
+++ b/pyproject.toml
@@ -222,6 +222,14 @@ requires = [
 requires = [
     "toga-android~=0.4.0",
 ]
+
+base_theme = "Theme.MaterialComponents.DayNight"
+
+build_gradle_dependencies = [
+    "androidx.appcompat:appcompat:1.6.1",
+    "com.google.android.material:material:1.11.0",
+]
+
 build_gradle_extra_content = """
 android.defaultConfig.ndk.abiFilters = ['arm64-v8a']
 """
