--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,3 @@
-# This project was generated with 0.3.17 using template: https://github.com/beeware/briefcase-template@v0.3.17
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
@@ -6,13 +5,12 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "Xdcheckin"
 version = "1.2.11"
-license = {text = "GNU General Public License v3 (GPLv3)"}
-readme = "README.md"
-description = "Chaoxing Checkin Tool for XDU."
 authors = [
 	{name = "Pairman", email = "pairmanxlr@gmail.com"}
 ]
-requires-python = ">=3.8"
+readme = "README.md"
+description = "Chaoxing Checkin Tool for XDU."
+license = {text = "GNU General Public License v3 (GPLv3)"}
 keywords = ["xdu", "xidian", "chaoxing", "livestream"]
 classifiers = [
 	"Framework :: Flask",
@@ -20,22 +18,16 @@ classifiers = [
 	"Programming Language :: JavaScript",
 	"License :: OSI Approved :: GNU General Public License (GPL)"
 ]
+requires-python = ">=3.8"
 dependencies = [
 	"flask >= 3.0.0",
-        "flask-session >= 0.6.0",
-        "pillow >= 8.4.0",
-        "pycryptodome >= 3.9.4",
-        "pyzbar >= 0.1.8",
-        "requests >= 2.31.0",
-        "requests-cache >= 1.2.0",
+	"flask-session >= 0.6.0",
+	"pillow >= 8.4.0",
+	"pycryptodome >= 3.9.4",
+	"pyzbar >= 0.1.8",
+	"requests >= 2.31.0",
+	"requests-cache >= 1.2.0",
 	"waitress >= 3.0.0"
-]
-
-[project.optional-dependencies]
-"app" = [
-  	"briefcase",
- 	"toga",
-	"xdcheckin.app*"
 ]
 
 [project.urls]
@@ -51,7 +43,7 @@ include = [
 	"xdcheckin.core.*",
 	"xdcheckin.server.*"
 ]
-# exclude = ["xdcheckin.app.*"]
+exclude = ["xdcheckin.app.*"]
 
 [tool.setuptools.package-data]
 "xdcheckin.server" = ["static/*", "templates/*"]
@@ -70,14 +62,14 @@ sources = [
 ]
 # test_sources = []
 requires = [
-        "flask >= 3.0.0",
-        "flask-session >= 0.6.0",
-        "pillow >= 8.4.0",
-        "pycryptodome >= 3.9.4",
-        "pyzbar >= 0.1.8",
-        "requests >= 2.31.0",
-        "requests-cache >= 1.2.0",
-        "waitress >= 3.0.0"
+	"flask >= 3.0.0",
+	"flask-session >= 0.6.0",
+	"pillow >= 8.4.0",
+	"pycryptodome >= 3.9.4",
+	"pyzbar >= 0.1.8",
+	"requests >= 2.31.0",
+	"requests-cache >= 1.2.0",
+	"waitress >= 3.0.0"
 ]
 # test_requires = []
 
@@ -115,97 +107,97 @@ system_runtime_requires = [
 
 [tool.briefcase.app.xdcheckin.linux.system.rhel]
 system_requires = [
-    # Needed to compile pycairo wheel
-    "cairo-gobject-devel",
-    # Needed to compile PyGObject wheel
-    "gobject-introspection-devel",
+	# Needed to compile pycairo wheel
+	"cairo-gobject-devel",
+	# Needed to compile PyGObject wheel
+	"gobject-introspection-devel",
 ]
 
 system_runtime_requires = [
-    # Needed to support Python bindings to GTK
-    "gobject-introspection",
-    # Needed to provide GTK
-    "gtk3",
-    # Dependencies that GTK looks for at runtime
-    "libcanberra-gtk3",
-    # Needed to provide WebKit2 at runtime
-    # "webkit2gtk3",
-    # Needed for pyzbar at runtime
-    "zbar-libs",
+	# Needed to support Python bindings to GTK
+	"gobject-introspection",
+	# Needed to provide GTK
+	"gtk3",
+	# Dependencies that GTK looks for at runtime
+	"libcanberra-gtk3",
+	# Needed to provide WebKit2 at runtime
+	# "webkit2gtk3",
+	# Needed for pyzbar at runtime
+	"zbar-libs",
 ]
 
 [tool.briefcase.app.xdcheckin.linux.system.suse]
 system_requires = [
-    # Needed to compile pycairo wheel
-    "cairo-devel",
-    # Needed to compile PyGObject wheel
-    "gobject-introspection-devel",
+	# Needed to compile pycairo wheel
+	"cairo-devel",
+	# Needed to compile PyGObject wheel
+	"gobject-introspection-devel",
 ]
 
 system_runtime_requires = [
-    # Needed to provide GTK
-    "gtk3",
-    # Needed to support Python bindings to GTK
-    "gobject-introspection", "typelib(Gtk)=3.0",
-    # Dependencies that GTK looks for at runtime
-    "libcanberra-gtk3-0",
-    # Needed to provide WebKit2 at runtime
-    # "libwebkit2gtk3",
-    # "typelib(WebKit2)",
-    # Needed for pyzbar at runtime
-    "libzbar0",
+	# Needed to provide GTK
+	"gtk3",
+	# Needed to support Python bindings to GTK
+	"gobject-introspection", "typelib(Gtk)=3.0",
+	# Dependencies that GTK looks for at runtime
+	"libcanberra-gtk3-0",
+	# Needed to provide WebKit2 at runtime
+	# "libwebkit2gtk3",
+	# "typelib(WebKit2)",
+	# Needed for pyzbar at runtime
+	"libzbar0",
 ]
 
 [tool.briefcase.app.xdcheckin.linux.system.arch]
 system_requires = [
-    # Needed to compile pycairo wheel
-    "cairo",
-    # Needed to compile PyGObject wheel
-    "gobject-introspection",
-    # Runtime dependencies that need to exist so that the
-    # Arch package passes final validation.
-    # Needed to provide GTK
-    "gtk3",
-    # Dependencies that GTK looks for at runtime
-    "libcanberra",
-    # Needed to provide WebKit2
-    # "webkit2gtk",
+	# Needed to compile pycairo wheel
+	"cairo",
+	# Needed to compile PyGObject wheel
+	"gobject-introspection",
+	# Runtime dependencies that need to exist so that the
+	# Arch package passes final validation.
+	# Needed to provide GTK
+	"gtk3",
+	# Dependencies that GTK looks for at runtime
+	"libcanberra",
+	# Needed to provide WebKit2
+	# "webkit2gtk",
 ]
 
 system_runtime_requires = [
-    # Needed to provide GTK
-    "gtk3",
-    # Needed to provide PyGObject bindings
-    "gobject-introspection-runtime",
-    # Dependencies that GTK looks for at runtime
-    "libcanberra",
-    # Needed to provide WebKit2 at runtime
-    # "webkit2gtk",
-    # Needed for pyzbar at runtime
-    "zbar",
+	# Needed to provide GTK
+	"gtk3",
+	# Needed to provide PyGObject bindings
+	"gobject-introspection-runtime",
+	# Dependencies that GTK looks for at runtime
+	"libcanberra",
+	# Needed to provide WebKit2 at runtime
+	# "webkit2gtk",
+	# Needed for pyzbar at runtime
+	"zbar",
 ]
 
 [tool.briefcase.app.xdcheckin.linux.appimage]
 manylinux = "manylinux_2_28"
 
 system_requires = [
-    # Needed to compile pycairo wheel
-    "cairo-gobject-devel",
-    # Needed to compile PyGObject wheel
-    "gobject-introspection-devel",
-    # Needed to provide GTK
-    "gtk3-devel",
-    # Dependencies that GTK looks for at runtime, that need to be
-    # in the build environment to be picked up by linuxdeploy
-    "libcanberra-gtk3",
-    "PackageKit-gtk3-module",
-    "gvfs-client",
-    # Needed for pyzbar at runtime
-    "zbar",
+	# Needed to compile pycairo wheel
+	"cairo-gobject-devel",
+	# Needed to compile PyGObject wheel
+	"gobject-introspection-devel",
+	# Needed to provide GTK
+	"gtk3-devel",
+	# Dependencies that GTK looks for at runtime, that need to be
+	# in the build environment to be picked up by linuxdeploy
+	"libcanberra-gtk3",
+	"PackageKit-gtk3-module",
+	"gvfs-client",
+	# Needed for pyzbar at runtime
+	"zbar",
 ]
 
 linuxdeploy_plugins = [
-    "DEPLOY_GTK_VERSION=3 gtk",
+	"DEPLOY_GTK_VERSION=3 gtk",
 ]
 
 [tool.briefcase.app.xdcheckin.linux.flatpak]
@@ -215,29 +207,20 @@ flatpak_sdk = "org.gnome.Sdk"
 
 [tool.briefcase.app.xdcheckin.windows]
 requires = [
-    "toga-winforms~=0.4.0",
+	"toga-winforms~=0.4.0",
 ]
 
 # Mobile deployments
 [tool.briefcase.app.xdcheckin.iOS]
 requires = [
-    "toga-iOS~=0.4.0",
-    "std-nslog~=1.0.0",
+	"toga-iOS~=0.4.0",
+	"std-nslog~=1.0.0",
 ]
 
 [tool.briefcase.app.xdcheckin.android]
 requires = [
-    "toga-android~=0.4.0",
+	"toga-android~=0.4.0",
 ]
-
-# base_theme = "Theme.MaterialComponents.DayNight"
-
-# build_gradle_dependencies = [
-    # "androidx.appcompat:appcompat:1.6.1",
-    # "com.google.android.material:material:1.11.0",
-    # Needed for DetailedList
-    # "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
-# ]
 
 build_gradle_extra_content = """
 android.defaultConfig.ndk.abiFilters = ['arm64-v8a']
@@ -246,6 +229,6 @@ android.defaultConfig.ndk.abiFilters = ['arm64-v8a']
 # Web deployments
 [tool.briefcase.app.xdcheckin.web]
 requires = [
-    "toga-web~=0.4.0",
+	"toga-web~=0.4.0",
 ]
 style_framework = "Shoelace v2.3"
