--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5.0.0
       with:
-        python-version: "3.x"
+        python-version: "3.12"
 
     - name: Install dependencies
       run: |
@@ -41,7 +41,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5.0.0
       with:
-        python-version: "3.x"
+        python-version: "3.10"
 
     - name: Install build dependencies
       run: |
@@ -68,7 +68,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5.0.0
       with:
-        python-version: "3.x"
+        python-version: "3.12"
 
     - name: Install build dependencies
       run: |
