--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -3,6 +3,10 @@ name: Build and Package
 on:
   workflow_dispatch:
 
+concurrency: 
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build_windows:
     runs-on: windows-latest
@@ -31,6 +35,33 @@ jobs:
         name: package_windows
         path: dist/
 
+  build_android:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4.1.1
+
+    - name: Set up Python
+      uses: actions/setup-python@v5.0.0
+      with:
+        python-version: "3.10"
+
+    - name: Install dependencies
+      run: |
+        pip install briefcase
+
+    - name: Build and Package on Ubuntu
+      run: |
+        briefcase package android -p apk
+      working-directory: ${{ github.workspace }}
+
+    - name: Upload package
+      uses: actions/upload-artifact@v4.3.1
+      with:
+        name: package_ubuntu
+        path: dist/
+
   build_ubuntu:
     runs-on: ubuntu-latest
 
@@ -43,12 +74,9 @@ jobs:
       with:
         python-version: "3.10"
 
-    - name: Install system dependencies
+    - name: Install dependencies
       run: |
         sudo apt install -y python3-dev libcairo2-dev libgirepository1.0-dev
-
-    - name: Install build dependencies
-      run: |
         pip install briefcase
 
     - name: Build and Package on Ubuntu
@@ -74,12 +102,9 @@ jobs:
       with:
         python-version: "3.12"
 
-    - name: Install system dependencies
+    - name: Install dependencies
       run: |
         sudo dnf install -y python3-develcairo-gobject-devel gobject-introspection-devel
-
-    - name: Install build dependencies
-      run: |
         pip install briefcase
 
     - name: Build and Package on Fedora
