--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -47,9 +47,14 @@ jobs:
       with:
         python-version: "3.10"
 
+    - name: Set up JDK
+    - uses: actions/setup-java@v3
+      with:
+        distribution: temurin
+        java-version: 17
+
     - name: Install dependencies
       run: |
-        sudo apt install -y openjdk-17-jdk
         pip install briefcase
 
     - name: Build and Package on Ubuntu
