--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -1,4 +1,4 @@
-name: Build and Package
+name: Build CI
 
 on:
   workflow_dispatch:
@@ -24,7 +24,7 @@ jobs:
       run: |
         pip install briefcase
 
-    - name: Build and Package on Windows
+    - name: Build and Package
       run: |
         briefcase package
       working-directory: ${{ github.workspace }}
@@ -32,6 +32,7 @@ jobs:
     - name: Upload package
       uses: actions/upload-artifact@v4.3.1
       with:
+        if-no-files-found: error
         name: package_windows
         path: dist/*.msi
 
@@ -57,7 +58,7 @@ jobs:
       run: |
         pip install briefcase
 
-    - name: Build and Package on Ubuntu
+    - name: Build and Package
       run: |
         briefcase package android -p apk
       working-directory: ${{ github.workspace }}
@@ -65,6 +66,7 @@ jobs:
     - name: Upload package
       uses: actions/upload-artifact@v4.3.1
       with:
+        if-no-files-found: error
         name: package_android
         path: dist/*.apk
 
@@ -85,7 +87,7 @@ jobs:
         sudo apt install -y python3-dev libcairo2-dev libgirepository1.0-dev
         pip install briefcase
 
-    - name: Build and Package on Ubuntu
+    - name: Build and Package
       run: |
         briefcase package
       working-directory: ${{ github.workspace }}
@@ -93,6 +95,7 @@ jobs:
     - name: Upload package
       uses: actions/upload-artifact@v4.3.1
       with:
+        if-no-files-found: error
         name: package_ubuntu
         path: dist/*.deb
 
@@ -112,7 +115,7 @@ jobs:
       run: |
         pip install briefcase
 
-    - name: Build and Package on Ubuntu
+    - name: Build and Package
       run: |
         briefcase package --target fedora
       working-directory: ${{ github.workspace }}
@@ -120,5 +123,6 @@ jobs:
     - name: Upload package
       uses: actions/upload-artifact@v4.3.1
       with:
+        if-no-files-found: error
         name: package_fedora
         path: dist/*.rpm
