--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -123,6 +123,6 @@ jobs:
     - name: Upload package
       uses: actions/upload-artifact@v4.3.1
       with:
-        if-no-files-found: error
+        # if-no-files-found: error
         name: package_fedora
         path: dist/*.rpm
