--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -49,7 +49,7 @@ jobs:
         python-version: "3.10"
 
     - name: Set up JDK
-    - uses: actions/setup-java@v3
+      uses: actions/setup-java@v3
       with:
         distribution: temurin
         java-version: 17
@@ -123,6 +123,6 @@ jobs:
     - name: Upload package
       uses: actions/upload-artifact@v4.3.1
       with:
-        # if-no-files-found: error
+        if-no-files-found: error
         name: package_fedora
         path: dist/*.rpm
