--- a/pyproject.toml
+++ b/pyproject.toml
@@ -222,6 +222,11 @@ requires = [
 	"toga-android~=0.4.0",
 ]
 
+build_gradle_dependencies = [
+	"androidx.appcompat:appcompat:1.6.1",
+	"com.google.android.material:material:1.11.0",
+]
+
 build_gradle_extra_content = """
 android.defaultConfig.ndk.abiFilters = ['arm64-v8a']
 """
@@ -231,4 +236,5 @@ android.defaultConfig.ndk.abiFilters = ['arm64-v8a']
 requires = [
 	"toga-web~=0.4.0",
 ]
+
 style_framework = "Shoelace v2.3"
