--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Build and Package
       run: |
-        briefcase package
+        briefcase package --adhoc-sign
       working-directory: ${{ github.workspace }}
 
     - name: Upload package
