--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -53,6 +53,7 @@ jobs:
       with:
         distribution: temurin
         java-version: 17
+        cache: gradle
 
     - name: Install dependencies
       run: |
