--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -55,6 +55,14 @@ jobs:
         java-version: 17
         cache: gradle
 
+    - name: Set up Android SDK
+      uses: maxim-lobanov/setup-android-tools@v1
+      with:
+        packages: |
+          platforms;android-34
+          build-tools;34.0.0
+        cache: true
+
     - name: Install dependencies
       run: |
         pip install briefcase
