--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -60,7 +60,11 @@ jobs:
     - name: Set up Android SDK
       uses: android-actions/setup-android@v3
       with:
+        log-accepted-android-sdk-licenses: false
         cmdline-tools-version: 9477386
+        packages: |
+          build-tools;34.0.0
+          platforms;android-34
 
     - name: Install dependencies
       run: |
