--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -73,6 +73,18 @@ jobs:
         briefcase package android -p apk -vv
       working-directory: ${{ github.workspace }}
 
+    - name: Sign APK
+      uses: Tlaster/android-sign@v1.2.2
+      with:
+        releaseDirectory: dist/*.apk
+        signingKeyBase64: ${{ secrets.ANDROID_KEYSTORE }}
+        output: build/release/signed
+        alias: ${{ secrets.ANDROID_KEYSTORE_ALIAS }}
+        keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+        keyPassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+      env:
+        BUILD_TOOLS_VERSION: 34.0.0
+
     - name: Upload package
       uses: actions/upload-artifact@v4.3.1
       with:
