--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -78,7 +78,7 @@ jobs:
       with:
         releaseDirectory: dist/
         signingKeyBase64: ${{ secrets.ANDROID_KEYSTORE }}
-        output: dist/signed
+        output: dist/
         alias: ${{ secrets.ANDROID_KEYSTORE_ALIAS }}
         keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
         keyPassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
