--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -1,6 +1,9 @@
 name: Build and Package
 
 on:
+  push:
+    paths: |
+      **/pyproject.toml
   workflow_dispatch:
 
 concurrency: 
@@ -18,7 +21,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5.0.0
       with:
-        python-version: "3.12"
+        python-version: 3.12
 
     - name: Install dependencies
       run: |
@@ -46,7 +49,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5.0.0
       with:
-        python-version: "3.10"
+        python-version: 3.10
 
     - name: Set up JDK
       uses: actions/setup-java@v4.1.0
@@ -102,7 +105,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5.0.0
       with:
-        python-version: "3.10"
+        python-version: 3.10
 
     - name: Install dependencies
       run: |
@@ -131,7 +134,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5.0.0
       with:
-        python-version: "3.10"
+        python-version: 3.10
 
     - name: Install dependencies
       run: |
@@ -159,7 +162,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5.0.0
       with:
-        python-version: "3.10"
+        python-version: 3.10
 
     - name: Install dependencies
       run: |
