--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5.0.0
       with:
-        python-version: 3.12
+        python-version: "3.12"
 
     - name: Install dependencies
       run: |
@@ -49,7 +49,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5.0.0
       with:
-        python-version: 3.10
+        python-version: "3.10"
 
     - name: Set up JDK
       uses: actions/setup-java@v4.1.0
@@ -105,7 +105,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5.0.0
       with:
-        python-version: 3.10
+        python-version: "3.10"
 
     - name: Install dependencies
       run: |
@@ -134,7 +134,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5.0.0
       with:
-        python-version: 3.10
+        python-version: "3.10"
 
     - name: Install dependencies
       run: |
@@ -162,7 +162,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5.0.0
       with:
-        python-version: 3.10
+        python-version: "3.10"
 
     - name: Install dependencies
       run: |
